objects/DBT_Debit_ARG__c.object
<CustomObject>
    <fields>
        <fullName>Comment_AR__c</fullName>
        <description>Free text to add any comment</description>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DebitAmount_AR__c</fullName>
        <description>Debit Note Amount</description>
        <label>Debit Note Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DebitNo_AR__c</fullName>
        <description>Debit Note Number</description>
        <label>Debit Note Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DebitNoteType_AR__c</fullName>
        <description>Debit Note Type</description>
        <label>Debit Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_JDE_Debito__c</fullName>
        <label>ID JDE Debito</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IssueDate_AR__c</fullName>
        <description>Cheque issue date</description>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_AR_IntegrationStatus__c</fullName>
        <label>Integration Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_AR_JDEReturnCode__c</fullName>
        <label>JDE Return Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceiptNo_AR__c</fullName>
        <description>Receipt Number</description>
        <label>Receipt No</label>
        <referenceTo>RCP_Receipt_ARG__c</referenceTo>
        <relationshipName>Debits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Serial_AR__c</fullName>
        <description>Debit Note Serial</description>
        <label>Debit Note Serial</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAT Debit</label>
    <nameField>
        <label>Nombre de debit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Debits</pluralLabel>
    <recordTypes>
        <fullName>DPT_Standard_AR</fullName>
        <active>true</active>
        <label>Standard AR</label>
    </recordTypes>
    <recordTypes>
        <fullName>DPT_Standard_UY</fullName>
        <active>true</active>
        <label>Standard UY</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_AR_NameLenghtValidation</fullName>
        <active>true</active>
        <description>Validates that the Name field has a maximun of 30 characters</description>
        <errorConditionFormula>LEN( Name ) &gt; 30</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>El campo Nombre puede tener 30 caracteres como máximo.</errorMessage>
    </validationRules>
</CustomObject>